cultura mais html dos pontos turisticos

--- a/html/cadastro.html
+++ b/html/cadastro.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
 
-    <img class="imagem" src="/imagens/cadastro.png" alt="italia">
+    <img class="imagem-cadastro" src="/imagens/cadastro.png" alt="italia">
 
     <main class="container-login">
 
