--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
 
-    <img class="imagem" src="./imagens/login.png" alt="imagem italia">
+    <img class="imagem-login" src="./imagens/login.png" alt="imagem italia">
 
     <main class="container-login">
 
