inicio dos pontos turisticos

--- a/html/pontos.html
+++ b/html/pontos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Pontos Turísticos</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
 
@@ -27,34 +27,37 @@
 
     <h1 class="titulo-pontos">PONTOS TURÍSTICOS</h1>
 
-    <section class="bloco-ponto">
-        <h2>1. DUOMO DE MILÃO – (MILÃO)</h2>
-        <p>Fachada impressionante com milhares de estátuas e pináculos. É possível subir ao topo e ter uma vista panorâmica de Milão.</p>
-        <p>Dica prática: Reserve com antecedência para evitar filas, especialmente nos meses de alta temporada.</p>
-        <p>Vibe: Urbano, histórico, artístico.</p>
-    </section>
+    <div class="bloco-ponto">
+        <img class="img-ponto" src="../imagens/duomo.png">
+        <div class="bloco-texto">
+            <h2>1. DUOMO DE MILÃO – (MILÃO)</h2>
+            <p>Fachada impressionante com milhares de estátuas e pináculos.</p>
+            <p>Vista panorâmica ao subir no topo.</p>
+        </div>
+    </div>
 
-    <section class="bloco-ponto">
-        <h2>2. COSTA AMALFITANA – (SUDOESTE DA ITÁLIA)</h2>
-        <p>Paisagens de tirar o fôlego, perfeito para descanso, romance ou fotografia. Vilas charmosas como Positano tornam o local especial.</p>
-        <p>Dica prática: Pode ficar bastante turístico; escolha vilas menos conhecidas ou vá fora de época.</p>
-        <p>Vibe: Mediterrânea, relaxante, sofisticada.</p>
-    </section>
+    <div class="bloco-ponto">
+        <img class="img-ponto" src="../imagens/costa.png">
+        <div class="bloco-texto">
+            <h2>2. COSTA AMALFITANA – (SUDOESTE DA ITÁLIA)</h2>
+            <p>Paisagens mediterrâneas e vilas coloridas à beira-mar.</p>
+        </div>
+    </div>
 
-    <section class="bloco-ponto">
-        <h2>3. COLISEU – (ROMA)</h2>
-        <p>No centro de Roma, o Coliseu é parada obrigatória. Maior anfiteatro já construído, uma das sete maravilhas do mundo e patrimônio da Unesco.</p>
-        <p>É possível visitar internamente, com passeios diurnos ou noturnos.</p>
-    </section>
+    <div class="bloco-ponto">
+        <img class="img-ponto" src="../imagens/coliseu.png">
+        <div class="bloco-texto">
+            <h2>3. COLISEU – (ROMA)</h2>
+            <p>Maior anfiteatro já construído e patrimônio histórico mundial.</p>
+        </div>
+    </div>
 
-    <section class="bloco-ponto">
-        <h2>4. TORRE DE PISA – (PISA)</h2>
-        <p>O campanário da Catedral de Santa Maria Assunta ficou famoso como a Torre de Pisa.</p>
-        <p>Localizada na Piazza dei Miracoli, é patrimônio da Humanidade pela Unesco.</p>
-        <p>A inclinação é causada pelo solo argiloso e poroso.</p>
-    </section>
+    <div class="bloco-ponto">
+        <img class="img-ponto" src="../imagens/pisa.png">
+        <div class="bloco-texto">
+            <h2>4. TORRE DE PISA – (PISA)</h2>
+            <p>Campanário inclinado localizado na Piazza dei Miracoli.</p>
+        </div>
+    </div>
 
 </div>
-
-</body>
-</html>
